--- a/templates/password_set.html
+++ b/templates/password_set.html
@@ -17,3 +17,5 @@
        </div>
    </div>
 {% endblock %}
+hx-post="{% url 'sentimental_analysis' %}" hx-indicator="#indicator"  class="gpt_form"  >
+{% csrf_token %}
