--- a/templates/password_reset_done.html
+++ b/templates/password_reset_done.html
@@ -27,7 +27,7 @@
 <body>
     <div class="utility-page-wrapper">
         <div class="utility-page-wrapper-content with-card"><a href="/" class="utility-logo w-inline-block"><img
-                    src="https://assets.website-files.com/5f0763bf575ff70f2f96ccaa/5f078598f0a4fd865d7c9833_SoftBit%20-%20Light%20v2.svg"
+            src="https://i.pinimg.com/736x/06/e4/22/06e422b0319a58430198f1156580b7ed.jpg" style="border-radius: 110px;"
                     alt="" class="utility-logo" /></a>
             <div class="utility-page-form card max-width">
                 <div class="lottie-success" data-w-id="c5434594-810e-382a-2804-63f5f5edd67e"
