--- a/templates/plan_detail.html
+++ b/templates/plan_detail.html
@@ -1,15 +1,226 @@
 
+{% extends 'base.html' %}
+{% block title %} {{plan_detail.name}} {% endblock title %}
+{% block content %}
+
 <head>
-    <link href="https://assets-global.website-files.com/65e5b8e7e13f2e507c87090d/css/ai-one-template.webflow.7c7a707ac.css" rel="stylesheet" type="text/css"/>
-    <title>{{plan_detail.name}}</title>
+
+      
+     
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/daisyui@4.11.1/dist/full.min.css" rel="stylesheet" type="text/css" />
+        <script src="https://cdn.tailwindcss.com"></script>
+        
+    </head>
+    <style>
+        #spinnerOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: none;
+            justify-content: center;
+            align-items: center;
+          }
+          
+          .spinner {
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top: 4px solid #fff;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+          }
+          
+          @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+          }
+      </style>
 </head>
+<div class="font-sans bg-gray-700">
+    <div class="p-6 lg:max-w-7xl max-w-2xl max-lg:mx-auto">
+      <div class="grid items-start grid-cols-1 lg:grid-cols-5 gap-12">
+        <div class="lg:col-span-3 w-full lg:sticky top-0 text-center">
+          <div class="bg-gray-800 px-4 py-10 rounded-xl">
+            <img src="{{plan_detail.plan_image.url}}" alt="Product" class="w-4/5 rounded object-cover mx-auto" />
+          </div>
 
-<div class="heading-style-h6">{{plan_detail.name}}</div>
-<div>{{plan_detail.plan_description}}</div>
-<div>${{plan_detail.plan_pricing}}</div>
-<div class="margin-top margin-medium">Save {{plan_detail.discount}}<a href="/sign-up" class="button max-width-full w-button">Purchase Now</a></div>
-<div>{{plan_detail.benefit1}}<br/></div>
-<div>{{plan_detail.benefit2}}<br/></div>
-<div>{{plan_detail.benefit3}}<br/></div>
-<div>{{plan_detail.benefit4}}<br/></div>
+         
+        </div>
 
+        <div class="lg:col-span-2">
+          <h2 class="text-3xl font-semibold text-white">{{plan_detail.name}}</h2>
+          <div class="flex flex-wrap gap-4 mt-4">
+            <p class="text-white text-4xl font-semibold">${{plan_detail.plan_pricing}}</p>
+            <p class="text-gray-400 text-xl"> <span class="text-sm ml-1">Save </span>{{plan_detail.discount}}</p>
+          </div>
+
+          {% if check %}<h1 class="text-lg font-semibold text-white">You can't purchase a plan again</h1>
+{% else %}
+<div class="flex flex-wrap gap-4 mt-8">
+    <button type="button" class="min-w-[200px] px-4 py-3 bg-yellow-300 hover:bg-yellow-400 text-black text-sm font-semibold rounded" onclick="buy(event)"  id="showSpinnerButton">Buy now</button>
+    
+  </div>
+{% endif %}
+
+          
+
+          <div class="mt-8">
+            <h3 class="text-lg font-semibold text-white">About the {{plan_detail.name}}</h3>
+           <p class="text-gray-400 text-xl">
+            
+            Explore our range of plans for starters,advanced needs, and scalable solutions. Custom services are available upon request. Get in touch with our team for personalized assistance
+           </p>
+          </div>
+
+          
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+ 
+    
+
+    <div class="w-full md:pr-6" style="display: none;">
+        <div class="mb-6 p-6 bg-gray-100 rounded-xl">
+            
+
+            <div class="flex space-x-6">
+                <div class="w-1/2 mb-4">
+                    
+                    <input name="name" type="hidden" class="w-full p-5 rounded-xl" value="{{plan_detail.name}}">
+                </div>
+
+                <div class="w-1/2 mb-4">
+                     
+                     
+                </div>
+            </div>
+            <div class="flex space-x-6">
+                <div class="w-1/2 mb-4">
+                    
+                    <input name="duration" type="hidden" class="w-full p-5 rounded-xl" value="{{plan_detail.duration}}">
+                </div>
+
+                <div class="w-1/2 mb-4">
+                     
+                     
+                </div>
+            </div>
+            <div class="flex space-x-6">
+                <div class="w-1/2 mb-4">
+                     
+                    <input name="paid_amount" type="hidden" class="w-full p-5 rounded-xl" value="{{plan_detail.plan_pricing}}">
+                </div>
+
+                 
+            </div>
+        </div>
+
+         
+        <div class="mb-6 p-6 bg-gray-100 rounded-xl" id="errors">
+        </div>
+    </div>
+</div>
+ 
+
+</div>
+
+<!--created session of stripe through script and display stripe builtin checkout form--> 
+<script type="application/javascript" src="https://js.stripe.com/v3/"></script>
+<!--validate form script-->
+<script>
+    let el = document.querySelector('#errors')
+
+    function validateForm(data) {
+        let errors = []
+
+        if (data.name === '') {
+            errors.push(' Name is empty')
+        }
+
+        if (data.paid_amount === '') {
+            errors.push('paid_amount is empty')
+        }
+        if (data.paid_amount === '') {
+            errors.push('duration is empty')
+        }
+        
+
+         
+
+        if (errors.length > 0) {
+            let html = '<ul>';
+            
+            errors.forEach((error) => {
+                html += '<li>' + error + '</li>';
+            })
+
+            el.innerHTML = html + '</ul>';
+        } else {
+            el.innerHTML = '';
+        }
+
+        return errors
+    }
+
+    function buy(event) {
+        event.preventDefault()
+
+        let data = {
+            'name': document.querySelector('input[name=name]').value,
+            'duration': document.querySelector('input[name=duration]').value,
+            'paid_amount': document.querySelector('input[name=paid_amount]').value,
+             
+        }
+
+        let errors = validateForm(data)
+
+        if (errors.length) {
+            console.log('Errors', errors)
+        } else {
+            var stripe = Stripe('{{ pub_key }}')
+
+            fetch('/start_order/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': '{{ csrf_token }}'
+                },
+                credentials: 'same-origin',
+                body: JSON.stringify(data)
+            })
+            .then(function(response) {
+                return response.json()
+            })
+            .then(function(session) {
+                return stripe.redirectToCheckout({ sessionId: session.session.id })
+            })
+            .then(function(result) {
+                if (result.error) {
+                    alert(result.error.message)
+                }
+            })
+            .catch(function(error) {
+                console.log('Errors', error)
+            })
+        }
+
+        return false
+    }
+</script>
+<div id="spinnerOverlay">
+    <div class="spinner"></div>
+</div>
+<script>
+document.getElementById('showSpinnerButton').addEventListener('click', function() {
+document.getElementById('spinnerOverlay').style.display = 'flex';
+});
+
+</script>
+{% endblock  %}
