--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
 <body>
   <div class="utility-page-wrapper">
     <div class="utility-page-wrapper-content with-card"><a href="/" class="utility-logo w-inline-block"><img
-          src="https://assets.website-files.com/649474f6271d3a9a1575e933/649474f6271d3a9a1575e9ec_Logo.svg"
+          src="https://i.pinimg.com/736x/06/e4/22/06e422b0319a58430198f1156580b7ed.jpg" style="border-radius: 110px;"
           alt="" class="utility-logo" /></a>
       <div class="utility-page-form card max-width">
         <h1 class="utility-card-title">Sign In</h1>
