--- a/templates/password_reset_sent.html
+++ b/templates/password_reset_sent.html
@@ -39,7 +39,7 @@
                 <p class="form-helper-text">We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
 
                     If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder. 
-                    SoftBit. </p><a href="mailto:yourem@gmail.com" class="filled-btn full-width w-button">Open Mail</a>
+                   . </p><a href="mailto:yourem@gmail.com" class="filled-btn full-width w-button">Open Mail</a>
             </div>
         </div>
     </div>
