--- a/templates/plan_detail.html
+++ b/templates/plan_detail.html
@@ -1,6 +1,6 @@
 
 {% extends 'base.html' %}
-{% block title %} {{plan_detail.name}} {% endblock title %}
+{% block title %} {{plan_detail.name}}{% endblock title %}
 {% block content %}
 
 <head>
@@ -61,7 +61,7 @@
           {% if check %}<h1 class="text-lg font-semibold text-white">You can't purchase a plan again</h1>
 {% else %}
 <div class="flex flex-wrap gap-4 mt-8">
-    <button type="button" class="min-w-[200px] px-4 py-3 bg-yellow-300 hover:bg-yellow-400 text-black text-sm font-semibold rounded" onclick="buy(event)"  id="showSpinnerButton">Buy now</button>
+    <button type="button" class="min-w-[200px] px-4 py-3 bg-yellow-300 hover:bg-yellow-400 text-black text-sm font-semibold rounded" onclick="buy(event)"  id="showSpinnerButton"  style="background-color: #22C55E;border-color: #22C55E">Buy now</button>
     
   </div>
 {% endif %}
