--- a/templates/login.html
+++ b/templates/login.html
@@ -65,6 +65,12 @@
             </div><input type="submit" value="Sign In" data-wait="Please wait..."
               class="filled-btn full-width w-button" /> 
           </form>
+           <a href="{% url 'social:begin' backend='google-oauth2' %}"
+        class="outlined-btn full-width google-btn w-inline-block"><img
+          src="https://assets.website-files.com/5f0763bf575ff70f2f96ccaa/5f0dd10e457382e21117abc4_google%20icon.svg"
+          alt="" class="google-btn-icon" />
+        <div>Sign in with Google</div>
+      </a>
           
             
           
